--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 			<strong><span id="selected">broadcast</span></strong>
 			<a id="broadcast" href="#" title="Talk to everyone">broadcast</a>
 		</div>
+		<a href="https://github.com/Fabryz/support-chat" title="Fork me on GitHub" target="_blank"><img id="ribbon" src="./img/ribbon.png" alt="Fork me on GitHub"></a>
 	</div>
 </body>
 </html>
