--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 
@@ -15,8 +15,8 @@
         <div id="support-chat">
             <div class="info">
                 <div id="status">Connecting...</div>
-                <div id="nick"></div>
                 <div id="online">There are <span id="total">0</span> users online.</div>
+                <div>You are: <span id="nick"></span></div>
             </div>
             <div id="logs">
                 <div id="messages"><ul></ul></div>
@@ -25,18 +25,19 @@
             <div class="controls">
                 <input type="text" id="chatInput" name="chatInput" maxlength="255" value="" />
                 <div id="talkto">
-                    You are talking to: <strong><span id="selected">broadcast</span></strong>
-                    <a id="broadcast" href="#" title="Talk to everyone">broadcast</a>
+                    You are talking to: <span id="selected">Everyone</span>
+                    <a id="everyone" href="#" title="Stop private chatting and go back talking to everyone">( X )</a>
                 </div>
             </div>
         </div>
 
-        <a href="https://github.com/Fabryz/support-chat" title="Fork me on GitHub" target="_blank"><img id="ribbon" src="./img/ribbon.png" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/Fabryz/support-chat" title="Fork me on GitHub" target="_blank">
+            <img id="ribbon" src="/img/ribbon.png" alt="Fork me on GitHub">
+        </a>
     </div>
 
-    <script type="text/javascript" src="./js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="./socket.io/socket.io.js"></script>
-
-    <script type="text/javascript" src="./js/support-chat.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/js/support-chat.js"></script>
 </body>
 </html>
